# boba-engine-old

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/black_tea/: Cargo.toml
crates/blacktea_runner/: Cargo.toml
crates/boba-core-new/: Cargo.toml
crates/boba_3d/: Cargo.toml
crates/boba_app/: Cargo.toml
crates/boba_app/src/: app.rs  event.rs  id.rs  lib.rs  milk_tea.rs  node.rs  pearl.rs
crates/boba_component/: Cargo.toml
crates/boba_core/: Cargo.toml
crates/boba_core_macros/: Cargo.toml
crates/boba_ecs/: Cargo.toml
crates/boba_hybrid/: Cargo.toml
crates/boba_input/: Cargo.toml
crates/boba_mesh/: Cargo.toml
crates/boba_objects/: Cargo.toml
crates/boba_proc_macros/: Cargo.toml
crates/boba_rapier3d/: Cargo.toml
crates/boba_renderer/: Cargo.toml
crates/boba_renderer/src/: renderer.rs
crates/boba_stage/: Cargo.toml
crates/boba_window/: Cargo.toml
crates/boba_winit/: Cargo.toml
crates/boba_world/: Cargo.toml
crates/handle_map/: Cargo.toml
crates/imposter/: Cargo.toml
crates/milk_tea/: Cargo.toml
crates/milk_tea_manager/: Cargo.toml
crates/milk_tea_runner/: Cargo.toml
crates/milktea_runner/: Cargo.toml
crates/taro_core/: Cargo.toml
crates/taro_core/src/: binding.rs  buffer.rs  camera.rs  hardware.rs  lib.rs  pipeline.rs  taro.rs
crates/taro_core/src/binding/: mod.rs
crates/taro_core/src/buffers/: color.rs  matrix.rs  mod.rs  types.rs
crates/taro_core/src/data/: buffer.rs  light.rs  mesh.rs  mod.rs  sampler.rs  texture.rs  texture2d.rs
crates/taro_core/src/data/buffers/: camera.rs  color.rs  light.rs  matrix.rs  mod.rs  transform.rs
crates/taro_core/src/data/texture/: mod.rs  texture2d.rs  types.rs
crates/taro_core/src/rendering/: mesh_renderer.rs  mod.rs  pearls.rs  pipeline.rs  texture.rs
crates/taro_core/src/rendering/shaders/: lit.rs  mod.rs  unlit.rs
crates/taro_renderer/: Cargo.toml
crates/taro_renderer/src/: camera.rs  hardware.rs  lib.rs  object.rs  render_passes.rs  render_pearls.rs  render_phase.rs  render_stage.rs  renderer.rs  resize_controller.rs  resize_pearl.rs  taro.rs  texture.rs  window.rs  window_surface.rs
crates/taro_renderer/src/adapters/: milk_tea.rs  mod.rs
crates/taro_renderer/src/adapters/milk_tea/: adapter.rs
crates/taro_renderer/src/data/: mesh.rs
crates/taro_renderer/src/data_types/: buffer.rs  mesh.rs  mod.rs  texture.rs
crates/taro_renderer/src/data_types/buffers/: color.rs  matrix.rs
crates/taro_renderer/src/events/: mod.rs  render.rs
crates/taro_renderer/src/passes/: blank.rs  mod.rs  white.rs
crates/taro_renderer/src/pearls/: mesh_renderer.rs
crates/taro_renderer/src/phases/: default.rs
crates/taro_renderer/src/render_phase/: default.rs  mod.rs
crates/taro_renderer/src/renderers/: mesh.rs
crates/taro_renderer/src/shading/: binding.rs  map.rs  mod.rs  shader.rs
crates/taro_renderer/src/shading/bindings/: mat4.rs
crates/taro_renderer/src/shading/buffers/: buffer.rs  color.rs  matrix.rs  mod.rs
crates/taro_renderer/src/shading/data_types/: mesh.rs  texture.rs
crates/taro_renderer/src/shading/types/: mesh.rs
crates/taro_renderer/src/stages/: init.rs  mod.rs  render.rs  startup.rs
crates/taro_renderer/src/storage/: camera_storage.rs  mod.rs  taro_storage.rs
crates/taro_renderer/src/types/: matrix_binding.rs  mesh.rs  mod.rs  shader.rs  texture.rs  uploader.rs
examples/: black_tea.rs  blacktea.rs  create_app.rs  cycle_of_rebirth.rs  delete_self.rs  dynamic_components.rs  ecs.rs  fps.rs  fps_headless.rs  fullscreen_switch.rs  input.rs  insert_destroy.rs  insert_destroy_limit_test.rs  keyboard.rs  mesh.rs  mesh_shader.wgsl  milk_tea.rs  milktea.rs  moving_window.rs  multiwindow.rs  physics.rs  pulsing_pipeline.rs  pulsing_render.rs  render.rs  skybox.rs  stage_order.rs  stage_ordering.rs  stages_and_controllers.rs  time.rs  timing.rs  transform_test.rs  triangle.rs  triangle_shader.wgsl  window.rs  window_expander.rs  window_mover.rs
src/: app.rs  lib.rs
src/runners/: mod.rs
(+233 files in other folders)
