[package]
name = "boba"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
  "crates/*",
]

[dependencies]
env_logger = "0.10"

boba_3d = { path = "./crates/boba_3d" }
milk_tea = { path = "./crates/milk_tea" }
boba_core = { path = "./crates/boba_core" }
taro_renderer = { path = "./crates/taro_renderer" }
