[package]
name = "boba_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boba_window = { path = "../boba_window"}

winit = "0.27"
wgpu = "0.14"
pollster = "0.2"
bytemuck = { version = "1.12", features = [ "derive" ] }