[package]
name = "taro_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
boba_core = { path = "../boba_core" }
boba_3d = { path = "../boba_3d" }
milk_tea_runner = { path = "../milk_tea_runner" }

log = "0.4"
naga = "0.10"
anymap = "0.12"
indexmap = "1.2"
pollster = "0.2"
bitflags = "1.3"
once_cell = "1.16"
bytemuck = { version = "1.4", features = ["derive"] }
wgpu = { version="0.14", features = ["spirv", "naga"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"]}
