[package]
name = "taro_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
wgpu = "0.14"
pollster = "0.2"
indexmap = "1.9"
hashbrown = "0.13"
raw-window-handle = "0.5"
bytemuck = { version = "1.4", features = ["derive"] }

boba_core = { path = "../boba_core" }
boba_3d = { path = "../boba_3d" }
milk_tea = { path = "../milk_tea" }
